[package]
name = "randomx"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "=0.8.4"
argon2 = "=0.5.3"
blake2 = "=0.10.6"
rand = { version = "*", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]
